// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<ul
  class="wp-components-list css-1klo2v3"
  data-g2-c16t="true"
  data-g2-component="List"
>
  <li
    class="wp-components-list-item css-wctrmq"
    data-g2-c16t="true"
    data-g2-component="ListItem"
  >
    Warm Hugs
  </li>
</ul>
`;

exports[`props should render ordered list 1`] = `
<ol
  class="wp-components-list css-53l222"
  data-g2-c16t="true"
  data-g2-component="List"
>
  <li
    class="wp-components-list-item css-wctrmq"
    data-g2-c16t="true"
    data-g2-component="ListItem"
  >
    Warm Hugs
  </li>
</ol>
`;
